<resources>
    <string name="app_name">NewsAPP</string>
    <string name="news_app">News App</string>
    <string name="Catergory">Catergory</string>
    <string name="heading">Heading</string>
    <string name="subheading">SubHeading</string>
    <string name="title">title</string>
    <string name="sub_description">Sub Description</string>
    <string name="content">Content</string>
    <string name="content_description">content Description</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nameofapi">NameOfAPI</string>
    <string name="username">Username</string>
    <string name="usernamecolon">Username:</string>
    <string name="emailcolon">Email:</string>
    <string name="email">abc@gnail.com</string>
    <string name="favourites">Favourites</string>
</resources>