<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/black_shade_1">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idToolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/news_app"
                android:textSize="34sp"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idToolbar"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/circle_border"
            android:src="@drawable/profile_icon"
            android:layout_margin="10dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:textColor="@color/yellow"
                android:text="@string/usernamecolon"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_vertical"/>

           <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/username"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:text="@string/emailcolon"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/email"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:text="@string/favourites"
            android:textSize="24sp"
            android:padding="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textAlignment="textStart"
            android:backgroundTint="@color/grey"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:background="@color/black_shade_1"
        android:id="@+id/idLLNavBar">

        <ImageButton
            android:id="@+id/idHomeBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/content_description"
            android:src="@drawable/home_icon"
            />

        <ImageButton
            android:id="@+id/idRegBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/reg_icon"
            android:contentDescription="@string/content_description"
            />

        <ImageButton
            android:id="@+id/idProfileBtn"
            android:layout_width="0dp"
            android:contentDescription="@string/content_description"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:clickable="true"

            android:focusable="true"
            android:src="@drawable/profile_icon"
            />
    </LinearLayout>


</RelativeLayout>