<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".NewsDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_shade_1"
        app:titleTextColor="@color/yellow"
        android:id="@+id/Toolbar"
        app:title="@string/news_app"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/idBtnReadNews"
        android:layout_below="@id/Toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/idIVNews"
                android:layout_margin="3dp"
                android:padding="3dp"
                
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/idTVTitle"
                android:layout_below="@id/idIVNews"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="4dp"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_description"
                android:layout_below="@id/idTVTitle"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textColor="@color/white"
                android:id="@+id/idTVSubDescription"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:layout_below="@id/idTVSubDescription"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textColor="@color/white"
                android:id="@+id/idTVContent"
                />

            
        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Read Full News"
        app:background="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:textAllCaps="false"
        android:id="@+id/idBtnReadNews"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"

        />
</RelativeLayout>